[package]
name = "todo"
version = "0.1.0"
authors = ["showen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
#rusqlite = "0.37.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]