[package]
name = "todo"
version = "0.1.0"
authors = ["showen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop", "web"] }
directories = "6.0.0"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
jni = "0.21"
rusqlite = { version = "0.37.0", features = ["bundled"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots"], default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
anyhow = "1.0"



[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
